[gd_scene load_steps=12 format=3 uid="uid://cjoqaq1t6m5wg"]

[ext_resource type="Script" path="res://character_body_2d.gd" id="1_d17lx"]
[ext_resource type="Script" path="res://main.gd" id="1_sdy21"]
[ext_resource type="Texture2D" uid="uid://ceiqbiitb8fmx" path="res://Pixel-backround.jpg" id="2_2t3bs"]
[ext_resource type="Texture2D" uid="uid://b8mxm86kspgv1" path="res://2d_lights_and_shadows_neutral_point_light.webp" id="3_mq083"]
[ext_resource type="Texture2D" uid="uid://dqetqoiv6k1v7" path="res://Hazmat Character-2.png.png" id="4_1dhwu"]
[ext_resource type="Script" path="res://moving_rect.gd" id="4_21sqc"]
[ext_resource type="PackedScene" uid="uid://boo2mtcdjhm8r" path="res://moving_rect.tscn" id="5_hu5nu"]
[ext_resource type="AudioStream" uid="uid://itpq8xe8hnb1" path="res://insane (1).mp3" id="6_3raww"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0re8n"]
size = Vector2(400.976, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqwls"]
size = Vector2(88, 136)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x3hng"]
size = Vector2(300, 20)

[node name="mainLevel" type="Node2D"]
scale = Vector2(1.00379, 1)
script = ExtResource("1_sdy21")

[node name="Pixel-backround" type="Sprite2D" parent="."]
position = Vector2(60.0002, -516)
scale = Vector2(11.1503, 15.1485)
texture = ExtResource("2_2t3bs")

[node name="Deadly" type="RigidBody2D" parent="." groups=["DeadlyItems"]]
position = Vector2(-3, 735)
scale = Vector2(8.2, 1.4)
gravity_scale = 0.0
lock_rotation = true
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deadly"]
position = Vector2(29.6341, -5.00003)
shape = SubResource("RectangleShape2D_0re8n")

[node name="ColorRect" type="ColorRect" parent="Deadly"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -171.341
offset_top = -22.1429
offset_right = -131.341
offset_bottom = 17.8571
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(10, 1)
color = Color(0.176471, 0.568627, 0.8, 0.447059)

[node name="PointLight2D" type="PointLight2D" parent="Deadly"]
scale = Vector2(1, 3.3751)
color = Color(0.364706, 1, 1, 1)
energy = 6.55
texture = ExtResource("3_mq083")
texture_scale = 1.15

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_d17lx")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(56, 40)
scale = Vector2(0.52, 0.52)
texture = ExtResource("4_1dhwu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_uqwls")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]

[node name="Label" type="Label" parent="CharacterBody2D"]
offset_left = -568.0
offset_top = -312.0
offset_right = -344.0
offset_bottom = -289.0
text = "Score: 0"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CharacterBody2D"]
stream = ExtResource("6_3raww")
autoplay = true

[node name="MovingRect" type="RigidBody2D" parent="."]
position = Vector2(-272, -136)
collision_layer = 2
collision_mask = 2
mass = 1000.0
gravity_scale = 0.0
lock_rotation = true
linear_velocity = Vector2(0, 150)
script = ExtResource("4_21sqc")

[node name="ColorRect" type="ColorRect" parent="MovingRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -10.0
offset_right = 151.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0.176419, 0.176419, 0.176419, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingRect"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_x3hng")

[node name="Timer" type="Timer" parent="MovingRect"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="SpawnInterval" type="Timer" parent="."]
wait_time = 1.25
autostart = true

[node name="MovingRect2" parent="." instance=ExtResource("5_hu5nu")]
position = Vector2(8, 80)

[node name="MovingRect3" type="RigidBody2D" parent="."]
position = Vector2(200, -272)
collision_layer = 2
collision_mask = 2
mass = 1000.0
gravity_scale = 0.0
lock_rotation = true
linear_velocity = Vector2(0, 150)
script = ExtResource("4_21sqc")

[node name="ColorRect" type="ColorRect" parent="MovingRect3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -10.0
offset_right = 151.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0.176419, 0.176419, 0.176419, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingRect3"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_x3hng")

[node name="Timer" type="Timer" parent="MovingRect3"]
wait_time = 7.0
one_shot = true
autostart = true

[node name="MovingRect4" type="RigidBody2D" parent="."]
position = Vector2(-224, -336)
collision_layer = 2
collision_mask = 2
mass = 1000.0
gravity_scale = 0.0
lock_rotation = true
linear_velocity = Vector2(0, 150)
script = ExtResource("4_21sqc")

[node name="ColorRect" type="ColorRect" parent="MovingRect4"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -10.0
offset_right = 151.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0.176419, 0.176419, 0.176419, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingRect4"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_x3hng")

[node name="Timer" type="Timer" parent="MovingRect4"]
wait_time = 9.0
one_shot = true
autostart = true

[node name="MovingRect5" type="RigidBody2D" parent="."]
position = Vector2(88, -504)
collision_layer = 2
collision_mask = 2
mass = 1000.0
gravity_scale = 0.0
lock_rotation = true
linear_velocity = Vector2(0, 150)
script = ExtResource("4_21sqc")

[node name="ColorRect" type="ColorRect" parent="MovingRect5"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -10.0
offset_right = 151.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0.176419, 0.176419, 0.176419, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingRect5"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_x3hng")

[node name="Timer" type="Timer" parent="MovingRect5"]
wait_time = 12.0
one_shot = true
autostart = true

[node name="LaserSpawnInterval" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="finished" from="CharacterBody2D/AudioStreamPlayer2D" to="CharacterBody2D" method="_on_audio_stream_player_2d_finished"]
[connection signal="timeout" from="MovingRect/Timer" to="MovingRect" method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnInterval" to="." method="_on_spawn_interval_timeout"]
[connection signal="timeout" from="MovingRect3/Timer" to="MovingRect3" method="_on_timer_timeout"]
[connection signal="timeout" from="MovingRect4/Timer" to="MovingRect4" method="_on_timer_timeout"]
[connection signal="timeout" from="MovingRect5/Timer" to="MovingRect5" method="_on_timer_timeout"]
[connection signal="timeout" from="LaserSpawnInterval" to="." method="_on_laser_spawn_interval_timeout"]
